[package]
name = "poetic_enc"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
atty = "0.2.14"
rand = "0.8.5"

[dev-dependencies]
poetic = "0.3.0"
