[package]
name = "poetic_enc"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
atty = "0.2.14"
rand = "0.8.5"
phf = { version = "0.11.2", features = ["macros"] }

[dev-dependencies]
poetic = "0.3.1"
rstest = "0.23.0"

[build-dependencies]
const-gen = "1.6.5"
